@@ -1,5 +1,5 @@
 ## Process this file with gengetopt to produce shishid_cmd.*
-# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson.
+# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2010 Simon Josefsson.
 #
 # This file is part of Shishi.
 #
@@ -24,11 +24,12 @@ purpose "Shishi Key Distribution Center server."
 
 section "Commands"
 
-option "listen" l "Sockets to listen for queries on.  Family is `IPv4' or `IPv6', if absent the family is decided by gethostbyname(ADDR). An address of `*' indicates all addresses on the local host. The default is `IPv4:*:kerberos/udp, IPv4:*:kerberos/tcp, IPv6:*:kerberos/udp, IPv6:*:kerberos/tcp'." string typestr="[FAMILY:]ADDR:PORT/TYPE" no
+option "listen" l "Sockets to listen for queries on.  Family is `IPv4' or `IPv6', if absent the family is decided by gethostbyname(ADDR). An address of `*' indicates all addresses on the local host. The default is `*:kerberos/udp, *:kerberos/tcp'." string typestr="[FAMILY:]ADDR:PORT/TYPE" no
 option "setuid" u "After binding socket, set user identity." string typestr="NAME" no
 
 section "TLS settings"
 
+option "no-tls" - "Disable TLS support" flag off
 option "x509cafile" - "X.509 certificate authorities used to verify client certificates, in PEM format." string typestr="FILE" no
 option "x509certfile" - "X.509 server certificate, in PEM format." string typestr="FILE" no
 option "x509crlfile" - "X.509 certificate revocation list to check for revoked client certificates, in PEM format." string typestr="FILE" no
